# mailbridge

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: test_publish.yaml
mailbridge/: __init__.py  client.py
mailbridge/providers/: base_email_provider.py  brevo_provider.py  mailgun_provider.py  postmark_provider.py  sendgrid_provider.py  ses_provider.py  smtp_provider.py
tests/: test_async_mailbridge_client.py  test_brevo_async.py  test_mailbridge_client.py  test_mailgun_async.py  test_mailgun_provider.py  test_postmark_async.py  test_sendgrid_async.py  test_sendgrid_provider.py  test_ses_async.py  test_smtp_async.py  test_smtp_provider.py
