[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mailbridge"
version = "2.1.0"
description = "Unified Python email library with multi-provider support (SendGrid, SES, Postmark, Mailgun, Brevo, SMTP)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Radomir Brkovic", email = "brkovic.radomir@gmail.com"}
]
maintainers = [
    {name = "Radomir Brkovic", email = "brkovic.radomir@gmail.com"}
]
keywords = [
    "email",
    "sendgrid",
    "ses",
    "postmark",
    "mailgun",
    "brevo",
    "smtp",
    "mail",
    "email-sending",
    "transactional-email",
    "bulk-email",
    "template-email",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

# Core runtime dependency — only `requests` is required out of the box.
# Every other dependency is optional so users only install what they need.
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
# Async support
async = [
    "aiohttp>=3.9.0",
    "aiosmtplib>=3.0.0",
]

# Provider-specific extras
ses = [
    "boto3>=1.28.0",
]

# Install everything (all providers + async)
all = [
    "boto3>=1.28.0",
    "aiohttp>=3.9.0",
    "aiosmtplib>=3.0.0",
]

# Development toolchain
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "requests-mock>=1.11.0",
    "boto3>=1.28.0",
    "aiohttp>=3.9.0",
    "aiosmtplib>=3.0.0",
    "coverage>=7.3.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "isort>=5.12.0",
    "pre-commit>=3.3.3",
    "python-dotenv>=1.0.0",
]

# Documentation
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.0",
]

[project.urls]
Homepage = "https://github.com/fastkit-org/mailbridge"
Documentation = "https://github.com/fastkit-org/mailbridge#readme"
Repository = "https://github.com/fastkit-org/mailbridge"
Issues = "https://github.com/fastkit-org/mailbridge"
Changelog = "https://github.com/fastkit-org/mailbridge/blob/main/CHANGELOG.md"

# ---------------------------------------------------------------------------
# Hatchling build configuration
# ---------------------------------------------------------------------------

[tool.hatch.build.targets.wheel]
packages = ["mailbridge"]

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
minversion = "7.0"
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=mailbridge",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["mailbridge"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_calls = false
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
